[package]
name = "ivf-candle"
version = "0.1.0"
edition = "2021"

[dependencies]
candle-core = { version = "0.8", features = ["accelerate"] }
candle-nn = "0.8"
ndarray = { version = "0.15", features = ["rayon", "blas"] }
ndarray-npy = "0.8"
rand = "0.8"
rayon = "1.8"
ordered-float = "4.2"
anyhow = "1.0"
blas-src = { version = "0.8", features = ["accelerate"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3

[[bin]]
name = "main"
path = "src/main.rs"

[build]
rustflags = [
    "-C", "target-cpu=native",
    "-C", "target-feature=+avx2,+fma",
    "-C", "opt-level=3"
]
